--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,12 @@
 .flex-space {
-  display: inline-flex;
-  width: calc(auto + 16px);
-  height: calc(auto + 16px);
-  justify-content: center;
-  align-items: center;
+	display: inline-flex;
+	width: calc(auto + 16px);
+	height: calc(auto + 16px);
+	justify-content: center;
+	align-items: center;
+}
+*, *::before, *::after {
+	box-sizing: border-box;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
